--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Sehat Hospital Template</title>
+  <title>Sehat Hospital</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -44,8 +44,8 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:syedabduljabbar45@gmail.com">syedabduljabbar45@gmail.com</a></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 90193 66643</span></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></i>
+          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 99999 88888</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
           <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
@@ -359,7 +359,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Appointment</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>We are happy to help you at your time</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -383,17 +383,17 @@
             <div class="col-md-4 form-group mt-3">
               <select name="department" id="department" class="form-select" required="">
                 <option value="">Select Department</option>
-                <option value="Department 1">Department 1</option>
-                <option value="Department 2">Department 2</option>
-                <option value="Department 3">Department 3</option>
+                <option value="Department 1">Endocrinology</option>
+                <option value="Department 2">Diabetician</option>
+                <option value="Department 3">Paedatrician</option>
               </select>
             </div>
             <div class="col-md-4 form-group mt-3">
               <select name="doctor" id="doctor" class="form-select" required="">
                 <option value="">Select Doctor</option>
-                <option value="Doctor 1">Doctor 1</option>
-                <option value="Doctor 2">Doctor 2</option>
-                <option value="Doctor 3">Doctor 3</option>
+                <option value="Doctor 1">Syed Farooque Ali</option>
+                <option value="Doctor 2">Syed Hyder Ali</option>
+                <!--option value="Doctor 3"></option-->
               </select>
             </div>
           </div>
