--- a/starter-page.html
+++ b/starter-page.html
@@ -44,8 +44,8 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:syedabduljabbar45@gmail.com">syedabduljabbar45@gmail.com</a></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 90193 66643</span></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></i>
+          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 99999 88888</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
           <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
@@ -154,8 +154,8 @@
           <div class="footer-contact pt-3">
             <p>Jawan's Street</p>
             <p>Cowl Bazaar, Ballari 583 102</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+91 90193 66643 </span></p>
-            <p><strong>Email:</strong> <span>syedabduljabbar45@gmail.com</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91 99999 88888 </span></p>
+            <p><strong>Email:</strong> <span>xyz@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -219,7 +219,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://sajs5-ai.github.io/">syedabduljabbar45</a>
+        Designed by <a href="https://sajs5-ai.github.io/">Syed</a>
       </div>
     </div>
 
