--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <h3>About Us</h3>
             <p>
-              Dolor iure expedita id fuga asperiores qui sunt consequatur minima. Quidem voluptas deleniti. Sit quia molestiae quia quas qui magnam itaque veritatis dolores. Corrupti totam ut eius incidunt reiciendis veritatis asperiores placeat.
+              Sehat Hospital has emerged as the first endocrine facility in Ballari, highlighting the hospital's dedication to quality and patient safety. Driven by a passion for patient care and a pursuit of excellence, Dr. Syed Farooque Ali has played a key role in establishing endocrine services in the area, making it his goal to provide top-notch care with compassion. This hospital is focused on achieving excellence in every facet of patient care, including diagnosis, treatment, follow-up, and ongoing management.
             </p>
             <ul>
               <li>
                 <i class="fa-solid fa-vial-circle-check"></i>
                 <div>
-                  <h5>Ullamco laboris nisi ut aliquip consequat</h5>
-                  <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
+                  <!-- <h5>Ullamco laboris nisi ut aliquip consequat</h5> -->
+                  <p>Thanks to its cutting-edge infrastructure, Sehat Hospital has enhanced its capabilities, now boasting well-ventilated wards and air-conditioned rooms that offer patients a comfortable and relaxing environment for their recovery. The hospital has also made significant investments in the latest diagnostic equipment, all of which carry FDA approval, guaranteeing that patients receive precise and dependable test results. A significant aspect of the hospital's infrastructure is its fully IT-enabled EMR system, which facilitates cloud-based data management. This digital record-keeping system offers physicians immediate access to patient information, enabling more personalized and efficient treatment options.</p>
                 </div>
               </li>
               <li>
