--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#departments">Facilities</a></li>
             <li><a href="#services">Infrastructure</a></li>
-            <li><a href="#doctors">Doctors</a></li>
+            <!-- <li><a href="#doctors">Doctors</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
