--- a/index.html
+++ b/index.html
@@ -169,13 +169,10 @@
                 <a class="nav-link" data-bs-toggle="tab" href="#departments-tab-7">Pharmacy and diabetes educator</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#departments-tab-8">Glucose monitoring and CGMS</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#departments-tab-8">Insulin pumps</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#departments-tab-9">Insulin pumps</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#departments-tab-10">Diabetic  footwear</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#departments-tab-9">Diabetic  footwear</a>
               </li>
             </ul>
           </div>
@@ -189,7 +186,7 @@
                     <!-- <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p> -->
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-1.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/thyroid.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -204,7 +201,7 @@
                      <p> They diagnose and treat diabetic retinopathy, provide routine eye exams, and provide treatment choices for other endocrine-related eye problems. Many patients with diabetes and other endocrine problems have seen an improvement in their quality of life as a result of the hospital's dedication to provide top-notch eye care services.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-2.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/departments-5.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -220,7 +217,7 @@
                       </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-3.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/foot.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -236,7 +233,7 @@
                       </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-4.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/nutrition.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -252,7 +249,7 @@
                       </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-5.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/lab.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -268,7 +265,7 @@
                     <p>At Sehat Hospital, TMT and ECG screenings are routinely conducted for diabetic patients to evaluate their cardiac health. The hospital's medical team collaborates to analyze the results and develop suitable treatment and management strategies for patients. By offering consistent cardiac screenings for those with diabetes, the hospital contributes to the prevention of complications and enhances the overall health and quality of life for its patients.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-1.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/ecg.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -284,23 +281,11 @@
                       </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-1.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/pharmacy.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
               <div class="tab-pane" id="departments-tab-8">
-                <div class="row">
-                  <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Glucose monitoring and CGMS</h3>
-                    <!-- <p class="fst-italic">Thyroid hormone is the hormone that controls your body's metabolism, the process in which your body transforms the food you eat into energy.</p> -->
-                    <!-- <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p> -->
-                  </div>
-                  <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-1.jpg" alt="" class="img-fluid">
-                  </div>
-                </div>
-              </div>
-              <div class="tab-pane" id="departments-tab-9">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Insulin pumps</h3>
@@ -314,11 +299,11 @@
                       <p>By adopting the Insulin Pump, patients can achieve better blood glucose management, experience fewer hypoglycemic episodes, and enjoy enhanced overall diabetes control. Our dedicated diabetes care team will assist you in incorporating the Insulin Pump into your diabetes management plan, offering comprehensive education, support, and continuous monitoring to ensure optimal outcomes. At Sehat Hospital, we are devoted to leveraging the latest advancements in diabetes care to empower our patients to lead fulfilling lives.</p>  
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-1.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/cgms.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
-              <div class="tab-pane" id="departments-tab-10">
+              <div class="tab-pane" id="departments-tab-9">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Diabetic  footwear</h3>
@@ -331,7 +316,7 @@
                      </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-1.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/diabeticfootwear.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
