--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="icon">
+  <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -37,13 +37,13 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:oursehathospital@gmail.com">oursehathospital@gmail.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9113054441</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://x.com/endodocsfa?s=11" class="twitter"><i class="bi bi-twitter-x"></i></a>
           <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.instagram.com/endodocsfa?igsh=NzdobDBvY251MnNw&utm_source=qr" class="instagram"><i class="bi bi-instagram"></i></a>
           <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
@@ -658,7 +658,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>xyz@gmail.com</p>
+                <p>oursehathospital@gmail.com</p>
               </div>
             </div>
 
@@ -716,12 +716,12 @@
             <p>#89/26, jawari street, near cowl bazaar police station</p>
             <p>Cowl Bazaar, Ballari 583 102</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+91 9113054441</span></p>
-            <p><strong>Email:</strong> <span>xyz@gmail.com</span></p>
+            <p><strong>Email:</strong> <span>oursehathospital@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href="https://x.com/endodocsfa?s=11"><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/endodocsfa?igsh=NzdobDBvY251MnNw&utm_source=qr"><i class="bi bi-instagram"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
