addind socail media links

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
           <a href="https://x.com/endodocsfa?s=11" class="twitter"><i class="bi bi-twitter-x"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.facebook.com/share/162GtJkq1k/?mibextid=wwXIfr" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="https://www.instagram.com/endodocsfa?igsh=NzdobDBvY251MnNw&utm_source=qr" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://in.linkedin.com/in/syed-farooque-ali-44ab96341" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </div><!-- End Top Bar -->
@@ -720,9 +720,9 @@
           </div>
           <div class="social-links d-flex mt-4">
             <a href="https://x.com/endodocsfa?s=11"><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href="https://www.facebook.com/share/162GtJkq1k/?mibextid=wwXIfr"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/endodocsfa?igsh=NzdobDBvY251MnNw&utm_source=qr"><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://in.linkedin.com/in/syed-farooque-ali-44ab96341"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
